Fixed grid overflow error

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 html {
   font-size: 100%;
@@ -15,7 +15,9 @@ p {
 }
 
 .App {
-  height: 100vh;
+  /* height: 100vh; */
+  max-width: 1170px;
+  margin: 0 auto;
 }
 
 .edufund__select__dropdown {
@@ -36,14 +38,14 @@ p {
 
 .edufund {
   padding: 3rem;
-  height: 100%;
+  /* height: 100%; */
   justify-content: center;
   background-color: #f3fdf8;
 
   display: grid;
-  gap: 1rem;
+  gap: 30px;
   grid-template-columns: 4fr 7fr;
-  grid-template-rows: max-content min-content;
+  grid-template-rows: auto;
   justify-items: center;
   align-items: center;
 }
@@ -61,7 +63,7 @@ p {
 }
 
 .edufund__rangeslect__firstsection__text {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 28px;
   font-weight: 600;
   font-stretch: normal;
@@ -148,13 +150,15 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .data-overlay {
-  font-size: 0.8rem;
-  position: absolute;
-  font-family: Arial, Helvetica, sans-serif;
-  top: 25%;
-  left: 10%;
-  padding: 0.8em;
-  letter-spacing: 0.15em;
+  font-size: 20px;
+  /* position: absolute; */
+  font-weight: 500;
+  font-family: "Montserrat";
+  /* top: 25%;
+  left: 12%; */
+  padding: 0.3em;
+  letter-spacing: 0.26px;
+  color: #354059;
   background-color: rgba(170, 255, 199, 0.3);
 }
 
@@ -271,6 +275,7 @@ input[type="number"]::-webkit-outer-spin-button {
 @media only screen and (max-width: 768px) {
   .edufund {
     height: 100%;
+    grid-template-rows: min-content minmax(100%, max-content);
   }
 
   .edufund__rangeselect {
